# ChangeLog for net-irc/epic5
# Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-irc/epic5/ChangeLog,v 1.15 2007/11/14 04:11:38 beandog Exp $

  14 Nov 2007; Steve Dibb <beandog@gentoo.org> epic5-0.3.5.ebuild:
  amd64 stable, bug 198872

  11 Nov 2007; Dawid Węgliński <cla@gentoo.org> epic5-0.3.5.ebuild:
  Stable on x86

*epic5-0.3.5 (20 Sep 2007)

  20 Sep 2007; Raúl Porcel <armin76@gentoo.org> -epic5-0.3.4.ebuild,
  +epic5-0.3.5.ebuild:
  Version bump, remove old

*epic5-0.3.4 (12 Jun 2007)

  12 Jun 2007; Raúl Porcel <armin76@gentoo.org> -epic5-0.3.3.ebuild,
  +epic5-0.3.4.ebuild:
  Uh, version bump again, and remove old

*epic5-0.3.3 (12 Jun 2007)

  12 Jun 2007; Raúl Porcel <armin76@gentoo.org> -epic5-0.3.2.ebuild,
  +epic5-0.3.3.ebuild:
  Version bump, old

*epic5-0.3.2 (19 Feb 2007)

  19 Feb 2007; Raúl Porcel <armin76@gentoo.org> -epic5-0.0.5.ebuild,
  +epic5-0.3.2.ebuild:
  Version bump and drop oldish

  10 Feb 2007; Christian Faulhammer <opfer@gentoo.org> epic5-0.0.5.ebuild:
  moved from USE flag tcltk to tcl, see bug 17808

  09 Feb 2007; Diego Pettenò <flameeyes@gentoo.org> ChangeLog:
  Regenerate digest in Manifest2 format.

  08 Jul 2005; David Holm <dholm@gentoo.org> epic5-0.0.5.ebuild:
  Added to ~ppc.

*epic5-0.0.5 (07 Jul 2005)

  07 Jul 2005; Sven Wegener <swegener@gentoo.org> -epic5-0.0.4.ebuild,
  +epic5-0.0.5.ebuild:
  Version bump.

  22 Apr 2005; Alin Nastac <mrness@gentoo.org> epic5-0.0.4.ebuild:
  net-misc/dante -> net-proxy/dante

*epic5-0.0.4 (10 Apr 2005)

  10 Apr 2005; Sven Wegener <swegener@gentoo.org>
  -files/0.0.3-ipv6-fix.patch, -epic5-0.0.3.ebuild, +epic5-0.0.4.ebuild:
  Version bump.

*epic5-0.0.3 (17 Feb 2005)

  17 Feb 2005; Sven Wegener <swegener@gentoo.org>
  -files/0.0.2-segfault-fix.patch, +files/0.0.3-ipv6-fix.patch,
  -epic5-0.0.2.ebuild, +epic5-0.0.3.ebuild:
  Version bump.

*epic5-0.0.2 (20 Jun 2004)
