@@ -1,5 +1,7 @@
 AUX epic-defaultserver.patch 610 RMD160 5c8c69a5337005584260808f0f05371c2a85f628 SHA1 0b629b08a9be1422f8e6706a0cf178f8c11320e4 SHA256 2883f24f8e2d95afc5dd0b3852b8585691c60a47d59aa71a19765301863c4920
 DIST epic5-0.3.5.tar.bz2 722469 RMD160 7459b7e673e706d35398ab1e724ca4402954ada7 SHA1 01ca8372d2d02f497d596c21a33ca00d34cf8171 SHA256 7cdefea991c0b08b16896dd34f3ee2aa190a84f7ee6594527ff9e8185fe881aa
+DIST epic5-1.0.tar.bz2 743330 RMD160 4e587662178cd6b858c3be4a4fb7e84b4cc13cdc SHA1 6f9044a735bcab2ca9fca7600051b64ae63bf7b4 SHA256 930a8db1225e16b56d27fc2b7a02072df24694b64e96e5069d9ee37a80ca38b9
 EBUILD epic5-0.3.5.ebuild 1341 RMD160 e762404aad31deb922743a635ded50e25dd3dc25 SHA1 aa878bae14eb377e85c70921b9dd63cf709f6b36 SHA256 07eec136df6c0cfd00442a93c5c85ce9807d8d3f24e0dcd4fadc5d4501b0607d
-MISC ChangeLog 2152 RMD160 d3d739774340a24fd7c8a4452b73027cb1968160 SHA1 e3fe8496923fe1eaf15c8d7ff4be030aa3f7e99d SHA256 713b6944fba11b6e8ba419a73a4ed1677b71a1131bf10921ac607570c9e5b993
+EBUILD epic5-1.0.ebuild 1297 RMD160 52ad6512c4886950df7c957764759396ad6f2372 SHA1 1457f57ee201145a25bd28f0accf80b82507d595 SHA256 b43dc73adc0d5af18e55865959d9a4ade38d394102a5a9114f640ea2cfe71932
+MISC ChangeLog 2331 RMD160 e32d2ae1408779c5bb3de8ac51ba0a739f836b26 SHA1 19a6c963ba6156cdba90ba8f8020f2f9fae5992a SHA256 d71ab18afd5a0f51ae2de76ac7dcea0107e670c7a6df6888d3fffce0d1387748
 MISC metadata.xml 160 RMD160 279429d1df694561fc2b163cb81c09387b9d940c SHA1 97da1b72eecc5585c65717da08eaccc9bc1cf7cd SHA256 5e058419199e306612929b80a996e3d16c6b20de674a56bb60558d3d36524fe2
